# snake-species-identification

./: .gitignore  LOGBOOK.md  README.md  TODO.md  categories.txt  setup.cfg
configs/: baseline.yaml  config.yaml  deploy.yaml  train.yaml
nbs/: TODO.md
nbs/deployments/: 00_800_convnext_tiny_50cls_11ep.ipynb
nbs/research/: LabelSmoothing.ipynb
nbs/training/: ProgressiveResizing.ipynb
pipelines/: baselines.py  deploy.py  metaflow_train.py  small_baselines.py  test.py  train.py
tsp_cls/: __init__.py
tsp_cls/dataloader/: augment.py  dataloader.py
tsp_cls/utils/: data.py  model.py  root.py
