[metadata]
name = tsp-cls
version = file: VERSION.txt
author = Jimmie Munyi
author_email = jimmiemunyi@gmail.com
url = https://jimmiemunyi.dev
description = Snake Image Classification
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fastai pytorch snake-classification hydra image-classification self-supervised
license = Apache 2.0
copyright = 2023 onwards, %(author)s
language = English
status = 3
user = jimmiemunyi


[options]
python_requires = >=3.8, <4
packages = find:
install_requires=
    fastcore<=1.5.28 
    pandas<=1.5.2 
    fastai<=2.7.11

[options.extras_require]
dev = 
    black==22.12.0
test = 
    pytest
    coverage

; [options.entry_points]
; console_scripts = 